--- a/index.html
+++ b/index.html
@@ -178,9 +178,9 @@
 
     const products = {
       'Instrument module': 'Sterile surgical tools kit for cranio-maxillofacial procedures.',
-      'Orbit': 'An implant designed to support and reconstruct the eye socket.',
-      'CranialMaxillofacialreconstruction': 'Used for facial bone reconstruction procedures.',
-      'Peek': 'Customized skull implant made from high-performance polymer.',
+      'orbit': 'An implant designed to support and reconstruct the eye socket.',
+      'CranialMaxillofacialrecon': 'Used for facial bone reconstruction procedures.',
+      'peek': 'Customized skull implant made from high-performance polymer.',
       'MandPlate': 'Mandibular plate for jaw fixation and reconstruction.'
     };
 
