--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
       background-size: cover;
       border: 4px solid #444;
       margin-bottom: 20px;
-      cursor: url('Glove.png'), auto;
+      cursor: url('https://cur.cursors-4u.net/cursors/cur-11/cur1034.cur'), auto;
     }
 
     .item {
