--- a/index.html
+++ b/index.html
@@ -60,7 +60,9 @@
       background-size: cover;
       border: 4px solid #444;
       margin-bottom: 20px;
-      cursor: url('https://cur.cursors-4u.net/cursors/cur-11/cur1034.cur'), auto;
+      cursor: url('https://ani.cursors-4u.net/toons/too-12/too1117.ani'), 
+        url('https://ani.cursors-4u.net/toons/too-12/too1117.png'), 
+        auto;
     }
 
     .item {
